// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays a passed customerPhone object correctly 1`] = `
<div
  className=""
  key="row12"
>
  <EditModelRow
    model={
      Object {
        "id": 12,
        "number_type": "H",
        "telephone": "78736",
      }
    }
    modelFields={
      Array [
        Object {
          "error": "Please select an option.",
          "fieldName": "number_type",
          "header": "Type",
          "required": true,
          "selectList": Array [
            Object {
              "name": "Home",
              "value": "H",
            },
            Object {
              "name": "Work",
              "value": "M",
            },
            Object {
              "name": "Mobile",
              "value": "W",
            },
          ],
          "type": "select_one",
        },
        Object {
          "error": "A value is required.",
          "fieldName": "telephone",
          "header": "Telephone",
          "length": 60,
          "required": true,
          "type": "text",
        },
        Object {
          "fieldName": "upd_date",
          "header": "Date Updated",
          "readonly": true,
          "type": "date_time",
        },
      ]
    }
    onChange={[Function]}
    persistedModel={
      Object {
        "id": 12,
        "number_type": "H",
        "telephone": "78736",
      }
    }
  />
  <div
    id="actions_12"
  >
    <span
      id="actions12"
    >
      <Icon
        as="i"
        id="delete-phone12"
        name="delete"
        onClick={[Function]}
        title="Delete Phone Number"
      />
    </span>
  </div>
</div>
`;

exports[`displays a passed customerPhone object correctly when an error is present 1`] = `
<div
  className="error"
  key="row12"
>
  <EditModelRow
    model={
      Object {
        "error": true,
        "id": 12,
        "number_type": "H",
        "telephone": "78736",
      }
    }
    modelFields={
      Array [
        Object {
          "error": "Please select an option.",
          "fieldName": "number_type",
          "header": "Type",
          "required": true,
          "selectList": Array [
            Object {
              "name": "Home",
              "value": "H",
            },
            Object {
              "name": "Work",
              "value": "M",
            },
            Object {
              "name": "Mobile",
              "value": "W",
            },
          ],
          "type": "select_one",
        },
        Object {
          "error": "A value is required.",
          "fieldName": "telephone",
          "header": "Telephone",
          "length": 60,
          "required": true,
          "type": "text",
        },
        Object {
          "fieldName": "upd_date",
          "header": "Date Updated",
          "readonly": true,
          "type": "date_time",
        },
      ]
    }
    onChange={[Function]}
    persistedModel={
      Object {
        "error": true,
        "id": 12,
        "number_type": "H",
        "telephone": "78736",
      }
    }
  />
  <div
    id="actions_12"
  >
    <span
      id="actions12"
    >
      <Icon
        as="i"
        id="delete-phone12"
        name="delete"
        onClick={[Function]}
        title="Delete Phone Number"
      />
    </span>
  </div>
</div>
`;
